--- a/CakeHouse/CakeHouse.html
+++ b/CakeHouse/CakeHouse.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <h1 class="title">Welcome to CANDY STORE</h1>
     <h1 class="title">CANDY STORE</h1>
 
     <div class="container">
