--- a/develop/dev.html
+++ b/develop/dev.html
@@ -99,12 +99,44 @@
           to start editing the text.
         </p>
       </div>
-    </div>
 
-    <!-- New container -->
+      <!-- New container -->
 
-    <div class="books-website">
-      <img src="books.jpg" alt="" class="books-website-jpg" />
+      <div class="books-website">
+        <img src="books.jpg" alt="" class="books-website-jpg" />
+
+        <div class="container-block">
+          <h4>About Us</h4>
+          <p>
+            Sample text. Click to select the text box. Click again or double
+            click to start editing the text.
+          </p>
+        </div>
+
+        <div class="container-block">
+          <h4>What We Do</h4>
+          <p>
+            Sample text. Click to select the text box. Click again or double
+            click to start editing the text.
+          </p>
+        </div>
+
+        <div class="container-block">
+          <h4>How We Work</h4>
+          <p>
+            Sample text. Click to select the text box. Click again or double
+            click to start editing the text.
+          </p>
+        </div>
+
+        <div class="container-block">
+          <h4>Contact Us</h4>
+          <p>
+            Sample text. Click to select the text box. Click again or double
+            click to start editing the text.
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
