--- a/develop/dev.html
+++ b/develop/dev.html
@@ -100,7 +100,7 @@
         </p>
       </div>
 
-      <!-- New container -->
+      <!-- 
 
       <div class="books-website">
         <img src="books.jpg" alt="" class="books-website-jpg" />
@@ -121,7 +121,7 @@
           </p>
         </div>
 
-        <div class="container-block">
+        <div class="container-blockTwo">
           <h4>How We Work</h4>
           <p>
             Sample text. Click to select the text box. Click again or double
@@ -129,7 +129,7 @@
           </p>
         </div>
 
-        <div class="container-block">
+        <div class="container-blockTwo">
           <h4>Contact Us</h4>
           <p>
             Sample text. Click to select the text box. Click again or double
@@ -137,6 +137,13 @@
           </p>
         </div>
       </div>
-    </div>
+
+       -->
+       
+       <div class="Business">
+        <h2>Business Card Design
+        </h2>
+        
+       </div>
   </body>
 </html>
