--- a/Account/User.html
+++ b/Account/User.html
@@ -21,7 +21,7 @@
       <divc class="password-block">
         <input type="text" placeholder="Enter your Name" class="input-show">
         <input type="email" placeholder="Enter your Name" class="input-show-two">
-        <button>SUBMIT</button>
+        <button onclick="myFunction">SUBMIT</button>
       </div>
 
 
@@ -36,6 +36,10 @@
    
     </div>
 
-
+    <script src="index.js">
+      function myFunction() { 
+        window.location.href = 'index.html';
+      }
+    </script>
   </body>
 </html>
