--- a/Best Beauty Treatments/index.html
+++ b/Best Beauty Treatments/index.html
@@ -21,5 +21,10 @@
         </p>
       </div>
     </div>
+    <!-- Вторая стнаница  -->
+    <div class="window-div">
+      <div class="img-window"></div>
+      <div class="img-windowTwo"></div>
+    </div>
   </body>
 </html>
