--- a/Happy Training/index.html
+++ b/Happy Training/index.html
@@ -68,36 +68,54 @@
       <div class="window-text-img">
         <h1>Latest Our News</h1>
       </div>
-      <div class="window-img">
-        <img src="imgs/4.jpg" alt="" />
-        <p>Wed Sep 14 2022 | Comments (0)</p>
-        <h5>Post 6 Headline</h5>
-      </div>
-      <div class="window-img">
-        <img src="imgs/5.jpg" alt="" />
-        <p>Wed Sep 14 2022 | Comments (0)</p>
-        <h5>Post 5 Headline</h5>
-      </div>
-      <div class="window-img">
-        <img src="imgs/6.jpg" alt="" />
-        <p>Wed Sep 14 2022 | Comments (0)</p>
-        <h5>Post 5 Headline</h5>
-      </div>
-      <div class="window-img">
-        <img src="imgs/7.jpg" alt="" />
-        <p>Wed Sep 14 2022 | Comments (0)</p>
-        <h5>Post 5 Headline</h5>
-      </div>
-      <div class="window-img">
-        <img src="imgs/8.jpg" alt="" />
-        <p>Wed Sep 14 2022 | Comments (0)</p>
-        <h5>Post 5 Headline</h5>
-      </div>
-      <div class="window-img">
-        <img src="imgs/4.jpg" alt="" />
-        <p>Wed Sep 14 2022 | Comments (0)</p>
-        <h5>Post 5 Headline</h5>
+      <div class="flex-box">
+        <div class="window-img">
+          <img src="imgs/4.jpg" alt="" />
+          <p>Wed Sep 14 2022 | Comments (0)</p>
+          <h5>Post 6 Headline</h5>
+        </div>
+        <div class="window-img">
+          <img src="imgs/5.jpg" alt="" />
+          <p>Wed Sep 14 2022 | Comments (0)</p>
+          <h5>Post 5 Headline</h5>
+        </div>
+        <div class="window-img">
+          <img src="imgs/6.jpg" alt="" />
+          <p>Wed Sep 14 2022 | Comments (0)</p>
+          <h5>Post 5 Headline</h5>
+        </div>
+        <div class="window-img">
+          <img src="imgs/7.jpg" alt="" />
+          <p>Wed Sep 14 2022 | Comments (0)</p>
+          <h5>Post 5 Headline</h5>
+        </div>
+        <div class="window-img">
+          <img src="imgs/8.jpg" alt="" />
+          <p>Wed Sep 14 2022 | Comments (0)</p>
+          <h5>Post 5 Headline</h5>
+        </div>
+        <div class="window-img">
+          <img src="imgs/4.jpg" alt="" />
+          <p>Wed Sep 14 2022 | Comments (0)</p>
+          <h5>Post 5 Headline</h5>
+        </div>
       </div>
     </div>
+
+    <!--   ПЯТАЯ СТРАНИЦА   -->
+    <div class="Happy-Tips">
+      <div class="img-10">
+        <div class="text-Tips">
+          <h1>Happy Tips</h1>
+          <p>
+            Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!--  СТРАНИЦА  6   -->
   </body>
 </html>
