adding new tags ✨

--- a/Happy Training/index.html
+++ b/Happy Training/index.html
@@ -117,5 +117,27 @@
     </div>
 
     <!--  СТРАНИЦА  6   -->
+    <div class="block-all">
+      <div class="all-one">
+        <h1>Benefits of Coaching for Individuals.</h1>
+      </div>
+      <div class="all-two">
+        <p>
+          Establish and act toward achieving goals Increased level of engagement
+          Safe Place to Gain Perspective Deeper Level of Learning Build Personal
+          Awareness Boost your networking opportunities
+        </p>
+      </div>
+      <div class="all-twee">
+        <p>
+          Sed pulvinar proin gravida hendrerit lectus. Faucibus et molestie ac
+          feugiat sed. Malesuada fames ac turpis egestas maecenas pharetra
+          convallis posuere morbi. Turpis egestas integer eget aliquet nibh
+          praesent. Vitae et leo duis ut diam quam nulla porttitor massa. Quis
+          lectus nulla at volutpat diam ut venenatis tellus. Eget nullam non
+          nisi est sit amet facilisis magna etiam.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
