--- a/Happy Training/index.html
+++ b/Happy Training/index.html
@@ -70,32 +70,44 @@
       </div>
       <div class="flex-box">
         <div class="window-img">
-          <img src="imgs/4.jpg" alt="" />
+          <div class="div-img">
+            <img src="imgs/4.jpg" alt="" />
+          </div>
           <p>Wed Sep 14 2022 | Comments (0)</p>
           <h5>Post 6 Headline</h5>
         </div>
         <div class="window-img">
-          <img src="imgs/5.jpg" alt="" />
+          <div class="div-img">
+            <img src="imgs/5.jpg" alt="" />
+          </div>
           <p>Wed Sep 14 2022 | Comments (0)</p>
           <h5>Post 5 Headline</h5>
         </div>
         <div class="window-img">
-          <img src="imgs/6.jpg" alt="" />
+          <div class="div-img">
+            <img src="imgs/6.jpg" alt="" />
+          </div>
           <p>Wed Sep 14 2022 | Comments (0)</p>
           <h5>Post 5 Headline</h5>
         </div>
         <div class="window-img">
-          <img src="imgs/7.jpg" alt="" />
+          <div class="div-img">
+            <img src="imgs/7.jpg" alt="" />
+          </div>
           <p>Wed Sep 14 2022 | Comments (0)</p>
           <h5>Post 5 Headline</h5>
         </div>
         <div class="window-img">
-          <img src="imgs/8.jpg" alt="" />
+          <div class="div-img">
+            <img src="imgs/8.jpg" alt="" />
+          </div>
           <p>Wed Sep 14 2022 | Comments (0)</p>
           <h5>Post 5 Headline</h5>
         </div>
         <div class="window-img">
-          <img src="imgs/4.jpg" alt="" />
+          <div class="div-img">
+            <img src="imgs/4.jpg" alt="" />
+          </div>
           <p>Wed Sep 14 2022 | Comments (0)</p>
           <h5>Post 5 Headline</h5>
         </div>
