--- a/technology/technology.html
+++ b/technology/technology.html
@@ -162,7 +162,7 @@
 
       <div class="finish-png">
         <div class="finish2-png">
-
+          <div class="hello-img">
         <div class="show-png">
         <img src="7.png" alt="" class="png-window">
         <h5 class="pngText-h5">OUR MAIN OFFICE</h5>
@@ -190,6 +190,7 @@
           <h5 class="pngText-h5">EMAIL</h5>
           <p class="pngText-p">isoev.8@gmail.com</p>
         </div>
+      </div>
       </div>
       </div>
 
